﻿===== Hasor-Core v2.4.5 (2016-?)
* 新增:
    01.BindInfo 新增 setMetaData 方法以设置元信息。
* 修复:
    01.Fix RsfSettings 接口的 add & remove & set 系方法,解决 settings key 出现大小写敏感问题。
    02.Fix AbstractEnvironment 的 refreshVariables 方法,忽略了对默认值的替换,导致了bug出现。
    03.修改 Environment 接口拼写错误的方法名。remoteEnvVar -> removeEnvVar。

===== Hasor-Core v2.4.4 (2016-09-05)
* 新增:
    01.宽泛的Servlet版本支持 servlet 2.3 到 servlet 3.1。
    02.新增支持文件上传功能支持。
    03.新增 @Async 注解,用于标记 restful 请求是否以 异步 servlet 方式执行。(需要容器支持 servlet 3 ,否则无效)
    04.如果容器支持 Servlet 3 那么 Hasor 会自动启用 Servlet 3.0 特性。
    05.servlet3: 基于 web-fragment 技术,您的 web.xml 中不需要任何配置或者您干脆删除 web.xml。
    06.servlet3: 支持通过@Async注解开启异步Servlet。
    07.servlet3: 文件上传共功能可以基于@Async转为异步文件上传(感谢:哎瑞！麓孩 提供的实现思路,这里是他的blog, http://ysj12.lofter.com/)。
* 改进:
    01.otg.more包瘦身前的一些调整。
    02.WebController类中方法访问修饰符调整。

===== Hasor-Core v2.4.3 (2016-08-18)
* 新增:
    01.新增 Htmlspace工具类:StringEscapeUtils、EntitiesUtils。工具来源为:apache-common
* 改进:
    01.改进启动日志输出。
    02.WebController 增加一组 putData 方法用于输出到渲染模版中。
    03.JdbcOperations接口可以通过依赖注入被注入到 Service 中。
    05.TransactionTemplateManager 代码优化,修复潜在的 npe 异常情况。
    06.ValidErrors 接口继承自 RenderData 获取参数更加方便。
    07.WebController 类重度优化,删除了一些重复的方法,增添表单验证相关的方法。

===== Hasor-Core v2.4.2 (2016-08-04)
* 新增:
    01.Restful 框架整合 Validation 插件增加请求参数 @Valid 验证功能。
    02.注解 @Valid 支持场景化验证。
* 改进:
    01.env.config 加载环境变量遇到名称冲突时的,Bug。
    02.DBModule 类,在声明 Aop 类匹配的时候从任意类,改为需要标记 @Transactional 注解的类。

===== Hasor-Core v2.4.1 (2016-08-01)
* 改进:
    01.env.config 功能的优化。

===== Hasor-Core v2.4.0 (2016-07-29)
* 新增:
    01.新增 DecSpaceMap 可以将多个Map合并成一个Map对象给予操作，每个子map可以通过一个空间字符串进行标识。
    02.AbstractSettings 类增加 resetValues 方法,可以通过 UpdateValue 接口更新载入的配置文件数据,一个典型的应用场景是模版化配置文件。
    03.支持配置文件模版化,通过模版化的配置文件。可以在不修改部署包的前提下,替换配置文件的值。使其可以方便的适用于各种环境，例如:日常、预发、线上、隔离。    
    04.新增 @InjectSettings 注解,支持配置文件数据注入。
    05.Restful、Template、mime 三个小插件整合到一起，提升为 webmvc 框架，编程接口依然以 Restful 为标准。
    06.Render渲染器,支持多种,并通过viewType可以动态指定。